# r2modman-tui

./: Cargo.toml  LICENSE  README.md
src/: client.rs  interface.rs  launcher.rs  main.rs  response.rs
src/r2mm/: launcher.rs  mod.rs
src/util/: mod.rs
