[package]
name = "r2modman-tui"
version = "0.1.0"
authors = ["Amar1729 <amar.paul16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }
hyper = "0.13.7"
hyper-tls = "0.4.3"
